# SaintOpenApi

./: .gitignore  main.py  pyproject.toml
legacy/saint/src/db/: db.py
legacy/saint/src/handlers/: admin_command.py  common.py  create_room.py  custom_invation.py  debug.py  info.py  invitation.py  join_room.py  legacy_route.py  room_admin.py  settings.py  wishes.py
legacy/saint/src/utilities/: notification.py
legacy/vibik/src/api/: app.py
legacy/vibik/src/moderation/: client.py
src/config/: auth.py  logger.py  settings.py
src/core/: exceptions.py
src/core/enums/: RoomAccessStatus.py
src/core/schemas/: user.py
src/core/services/: room_service.py  user_service.py
src/di/: container.py
src/infrastructure/api_client/: exceptions.py  room_client.py  user_client.py
src/infrastructure/db/: database.db  databaseй.db
src/infrastructure/repositories/: SaintRepository.py
src/infrastructure/repositories/interfaces/: ISaintRepository.py
src/infrastructure/settings/: config.py
src/presentation/bot/: bot.py
src/presentation/bot/handlers/: common.py  create_room.py  legacy_route.py  settings.py
src/presentation/bot/keyboards/: common_kb.py  room_admin_kb.py  room_member_kb.py  rooms_kb.py  settings_kb.py
src/presentation/bot/middlewares/: di_middleware.py  update_user.py
src/presentation/bot/texts/: callback_actions.py  messages.py  settings_texts.py  text.py
src/presentation/fastapi/: app.py  auth.py  dependencies.py  exception_handler.py
src/services/: room_service.py
src/services/schemas/: user.py
templates/: login.html
(+13 files in other folders)
